minor changes to text

--- a/views/faq.handlebars
+++ b/views/faq.handlebars
@@ -22,19 +22,9 @@
                     <i class="icon-plus"></i>
                   </span>
                 </dt>
-                <dd class="fw_light color_dark">VirtuTV is a decentralized video consumption and monetization platform that gives creators a chance to earn money for their videos. The base currency of the platform are Virtucoins (VRTUs).</dd>
+                <dd class="fw_light color_dark">VirtuTV is a decentralized video consumption and monetization platform that gives creators a chance to earn money for their videos, and gives non-creators a chance to earn money by streaming video. The base currency of the platform is Virtucoin (VRTU). </dd>
               </dl>
-              <dl class="accordion_item r_corners wrapper m_bottom_5 tr_all">
-                <dt class="accordion_link relative color_dark tr_all">What can you do with VirtuTV?
-                  <span class="icon_wrap_size_1 circle d_block hide">
-                    <i class="icon-minus"></i>
-                  </span>
-                  <span class="icon_wrap_size_1 circle d_block show">
-                    <i class="icon-plus"></i>
-                  </span>
-                </dt>
-                <dd class="fw_light color_dark">Monetize your videos and get paid to stream. VirtuTV allows you to compete with other creators to earn reputation points and VRTUs.</dd>
-              </dl>
+              
               <dl class="accordion_item r_corners wrapper m_bottom_5 tr_all">
                 <dt class="accordion_link relative color_dark tr_all"> Will I receive  Virtucoins when I signup?
                   <span class="icon_wrap_size_1 circle d_block hide">
@@ -66,10 +56,10 @@
                     <i class="icon-plus"></i>
                   </span>
                 </dt>
-                <dd class="fw_light color_dark">For the alpha product, VRTU's will be the currency of the VirtuTV Platform. Once the beta is finished, we will introduce Bitcoin, Ether and other stable-coins.</dd>
+                <dd class="fw_light color_dark">For the alpha product, VRTU's will be the currency of the VirtuTV Platform. Once the beta is finished, we will introduce Bitcoin, and Ether.</dd>
               </dl>
               <dl class="accordion_item r_corners wrapper m_bottom_5 tr_all">
-                <dt class="accordion_link relative color_dark tr_all">Will I be able to earn money on the platform?
+                <dt class="accordion_link relative color_dark tr_all">What are the different ways to earn money on the platform?
                   <span class="icon_wrap_size_1 circle d_block hide">
                     <i class="icon-minus"></i>
                   </span>
@@ -77,7 +67,7 @@
                     <i class="icon-plus"></i>
                   </span>
                 </dt>
-                <dd class="fw_light color_dark">Yes. All users can earn money by setting one-time and monthly pricing for their content, and one-time donations. </dd>
+                <dd class="fw_light color_dark">Content creators get paid per view and for one-time/recurring donations that unlocks content for viewers. Non-content creators get paid for streaming video.</dd>
               </dl>
               <dl class="accordion_item r_corners wrapper m_bottom_5 tr_all">
                 <dt class="accordion_link relative color_dark tr_all">How long until rollout after the crowdsale?
@@ -113,6 +103,17 @@
                 <dd class="fw_light color_dark">The crowdsale begins July 28th, 2017. We will provide periodic updates on our website and on our blog. Subscribe to our <a href="/crowdsale">newsletter</a> and our <a href="https://medium.com/@virtu.tv" target="_blank">Medium blog</a>. </dd>
               </dl>
               <dl class="accordion_item r_corners wrapper m_bottom_5 tr_all">
+                <dt class="accordion_link relative color_dark tr_all">Can you create and stream content and get paid for both?
+                  <span class="icon_wrap_size_1 circle d_block hide">
+                    <i class="icon-minus"></i>
+                  </span>
+                  <span class="icon_wrap_size_1 circle d_block show">
+                    <i class="icon-plus"></i>
+                  </span>
+                </dt>
+                <dd class="fw_light color_dark">Yes. </dd>
+              </dl>
+              <dl class="accordion_item r_corners wrapper m_bottom_5 tr_all">
                 <dt class="accordion_link relative color_dark tr_all">What is the fee to use the VirtuTV platform?
                   <span class="icon_wrap_size_1 circle d_block hide">
                     <i class="icon-minus"></i>
@@ -121,7 +122,25 @@
                     <i class="icon-plus"></i>
                   </span>
                 </dt>
-                <dd class="fw_light color_dark">There is a 5% fee for each successful payment given to a creator. We do not charge a fee, if you do not make money.</dd>
+                <dd class="fw_exbold color_dark">Donations</dd>
+                <ul class="color_dark fw_light m_left_15">
+                    <li class="m_bottom_8"><i class="icon-angle-right m_right_15 fs_large"></i>95% goes to content creators, if there is no locked content</li>
+                    <li class="m_bottom_8"><i class="icon-angle-right m_right_15 fs_large"></i>90% of every donation goes to creators, if there is locked content</li>
+                    <li class="m_bottom_8"><i class="icon-angle-right m_right_15 fs_large"></i>5% will go to file streamers</li>
+                </ul>
+                <br>
+                <dd class="fw_exbold color_dark">View Fees</dd>
+                <ul class="color_dark fw_light m_left_15">
+                    <li class="m_bottom_8"><i class="icon-angle-right m_right_15 fs_large"></i>50% will go to content creators</li>
+                    <li class="m_bottom_8"><i class="icon-angle-right m_right_15 fs_large"></i>5% will go to file streamers</li>
+                    <li class="m_bottom_8"><i class="icon-angle-right m_right_15 fs_large"></i>45% platform fee</li>
+                </ul>
+                <br>
+                <dd class="fw_exbold color_dark">Advertising Fees</dd>
+                <ul class="color_dark fw_light m_left_15">
+                  <li class="m_bottom_8"><i class="icon-angle-right m_right_15 fs_large"></i>50% goes to content creators</li>
+                  <li class="m_bottom_8"><i class="icon-angle-right m_right_15 fs_large"></i>50% platform fee</li>
+                </ul>
               </dl>
             </div>
           </div>
