--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -24,20 +24,19 @@
                 </div>
                 <figcaption>
                   <h5 class="color_dark m_bottom_15">Monetize Content</h5>
-                  <p class="m_bottom_23">The potential to earn money (Virtucoins) is unlimited. Choose your pay structure and start streaming. You'll never have to worry about being unfairly demonetized again. </p>
+                  <p class="m_bottom_23">Get paid not only for each ad engagement, but also for each view. Monetization is enabled by default. So, you are automatically setup to earn when signed up. A bank account, mailing address and tax information are not needed. </p>
                   {{!-- <a href="#" class="button_type_2 color_dark r_corners fs_medium color_blue_hover tr_all d_inline_b">Read More</a> --}}
                 </figcaption>
               </figure>
             </div>
-            <div class="col-lg-4 col-md-4 col-sm-4 m_xs_bottom_30">
-              <figure data-appear-animation="fadeInUp" data-appear-animation-delay="200">
+            <div class="col-lg-4 col-md-4 col-sm-4">
+              <figure data-appear-animation="fadeInUp" data-appear-animation-delay="400">
                 <div class="icon_wrap_size_6 type_2 circle d_inline_m animation_fill relative m_bottom_20">
-                  <i class="icon-eye tr_all"></i>
+                  <i class="icon-trophy tr_all"></i>
                 </div>
                 <figcaption>
-                  <h5 class="color_dark m_bottom_15">Anti-censorship</h5>
-                  <p class="m_bottom_23">The VirtuTV platform is completely decentralized. So you'll never have to worry about your content being unjustly censored.</p>
-                  {{!-- <a href="#" class="button_type_2 color_dark r_corners fs_medium color_pink_hover tr_all d_inline_b">Read More</a> --}}
+                  <h5 class="color_dark m_bottom_15">Earn More</h5>
+                  <p class="m_bottom_23">Our mission is to treat creators' fairly. That's why creators' always keep the majority earned.</p>
                 </figcaption>
               </figure>
             </div>
@@ -48,7 +47,7 @@
                 </div>
                 <figcaption>
                   <h5 class="color_dark m_bottom_15">Get Paid To Stream</h5>
-                  <p class="m_bottom_23">Content is shareable via social media to extend the reach to millions of people quickly; creators also have their own profile news feed.</p>
+                  <p class="m_bottom_23">Earn Virtucoins by streaming video files to viewers.</p>
                   {{!-- <a href="#" class="button_type_2 color_dark r_corners fs_medium color_purple_hover tr_all d_inline_b">Read More</a> --}}
                 </figcaption>
               </figure>
@@ -63,7 +62,7 @@
                 </div>
                 <figcaption>
                   <h5 class="color_dark m_bottom_15">P2P</h5>
-                  <p class="m_bottom_23">VirtuTV is built with Ethereum's smart contract technology. Users on the VirtuTV platform are connected to nodes on the Etheruem network. </p>
+                  <p class="m_bottom_23">VirtuTV is built with Ethereum's smart contract technology.  </p>
                   {{!-- <a href="#" class="button_type_2 color_dark r_corners fs_medium color_blue_hover tr_all d_inline_b">Read More</a> --}}
                 </figcaption>
               </figure>
@@ -80,14 +79,15 @@
                 </figcaption>
               </figure>
             </div>
-            <div class="col-lg-4 col-md-4 col-sm-4">
-              <figure data-appear-animation="fadeInUp" data-appear-animation-delay="400">
+            <div class="col-lg-4 col-md-4 col-sm-4 m_xs_bottom_30">
+              <figure data-appear-animation="fadeInUp" data-appear-animation-delay="200">
                 <div class="icon_wrap_size_6 type_2 circle d_inline_m animation_fill relative m_bottom_20">
-                  <i class="icon-trophy tr_all"></i>
+                  <i class="icon-eye tr_all"></i>
                 </div>
                 <figcaption>
-                  <h5 class="color_dark m_bottom_15">Earn More</h5>
-                  <p class="m_bottom_23">Our mission is to treat creators' fairly. That's why creators' keep 95% of the money they earn on the VirtuTV platform. Forever. </p>
+                  <h5 class="color_dark m_bottom_15">Anti-censorship</h5>
+                  <p class="m_bottom_23">The VirtuTV platform is completely decentralized. So you'll never have to worry about your content being unjustly censored.</p>
+                  {{!-- <a href="#" class="button_type_2 color_dark r_corners fs_medium color_pink_hover tr_all d_inline_b">Read More</a> --}}
                 </figcaption>
               </figure>
             </div>
@@ -109,7 +109,7 @@
             </div>
             <div class="col-lg-4 col-md-5" data-appear-animation="fadeInUp" data-appear-animation-delay="600">
               <h3 class="color_light fw_light m_bottom_40 m_xs_top_0">Our Mission</h3>
-              <p class="fs_large m_bottom_12 fw_light color_light">VirtuTV gives creators' the potential to earn money by streaming their videos: It's an ecosystem rather than a monopoly. There are no restrictions from editors, employers, video sharing services or advertisers. </p>
+              <p class="fs_large m_bottom_12 fw_light color_light">VirtuTV gives creators' the potential to earn income by streaming their videos, and gives others the potential to earn income by streaming videos to viewers. There are no restrictions from advertisers, editors, and employers. </p>
               <p class="fs_large fw_light m_bottom_45 color_light">We believe that video content and information should be censorship-free. That's why we created VirtuTV on a decentralized, P2P network.</p>
               <a href="#" class="color_green fs_medium button_type_3 tr_all r_corners tt_uppercase d_inline_b">Download Whitepaper</a>
             </div>
@@ -121,18 +121,26 @@
         <div class="container mobile_friendly">
           <div class="row">
             <div class="col-lg-5 col-md-4" data-appear-animation="fadeInUp" data-appear-animation-delay="400">
-              <h3 class="color_dark fw_light m_bottom_40 m_xs_top_0">Features</h3>
-              <p class="fs_large m_bottom_45 fw_light">Some of the features of the VirtuTV platform include support for various cryptocurrencies, creator profiles, and the option to set pricing for your content. Users get paid for streaming content. </p>
-
-              <h5 class="color_dark fw_ex_bold m_bottom_40 m_xs_top_0">Tokens</h5>
-              <p class="fs_large m_bottom_45 fw_light">The VirtuTV platform will include support for Ether, Bitcoin and Virtucoin. </p>
-
-              <h5 class="color_dark fw_ex_bold m_bottom_40 m_xs_top_0">Platform</h5>
-              <p class="fs_large m_bottom_45 fw_light">Some of the features of the platform include an online waller, unlimited video uploads, a user profile and dashboard, private link sharing, priority support, and much more. </p>
-
-              <h5 class="color_dark fw_ex_bold m_bottom_40 m_xs_top_0">Monetization</h5>
-              <p class="fs_large m_bottom_45 fw_light">Perpetually monetize any video in seconds. Creators' can be compensated in three ways: price setting content, receiving rewards on a one-time, peer-to-peer basis, and receiving rewards per time interval i.e., monthly.</p>
-
+                <h3 class="color_dark fw_light m_bottom_40 m_xs_top_0">Features</h3>
+                <p class="fs_large m_bottom_45 fw_light">Some of the features of the VirtuTV platform include monetization for everyone (not just content creators), an online wallet, video streaming via p2p, locked content (unlocked via donations). </p>
+                <h5 class="color_dark fw_ex_bold m_bottom_40 m_xs_top_0">Monetization for all</h5>
+                <ul class="color_dark fw_light">
+                  <li class="m_bottom_8"><i class="icon-angle-right m_right_15 fs_large"></i>Content creators get paid per view and per ad engagement.</li>
+                  <li class="m_bottom_8"><i class="icon-angle-right m_right_15 fs_large"></i>One time or recurring donations to unlock content via VirtuCoin and then later Ether and Bitcoin.</li>
+                </ul>
+                <br>
+                <h5 class="color_dark fw_ex_bold m_bottom_40 m_xs_top_0">Platform</h5>
+                <ul class="color_dark fw_light">
+                  <li class="m_bottom_8"><i class="icon-angle-right m_right_15 fs_large"></i>Online wallet</li>
+                  <li class="m_bottom_8"><i class="icon-angle-right m_right_15 fs_large"></i>Video streaming via p2p</li>
+                  <li class="m_bottom_8"><i class="icon-angle-right m_right_15 fs_large"></i>Locked content (unlocked via donations)</li>
+                  <li class="m_bottom_8"><i class="icon-angle-right m_right_15 fs_large"></i>Immediately get $5 worth of VRTU upon signup for freer</li>
+                  <li class="m_bottom_8"><i class="icon-angle-right m_right_15 fs_large"></i>Video engagement (like, dislike)</li>
+                  <li class="m_bottom_8"><i class="icon-angle-right m_right_15 fs_large"></i>Nested comments</li>
+                  <li class="m_bottom_8"><i class="icon-angle-right m_right_15 fs_large"></i>Subscriptions</li>
+                  <li class="m_bottom_8"><i class="icon-angle-right m_right_15 fs_large"></i>Sharable video links</li>
+                  <li class="m_bottom_8"><i class="icon-angle-right m_right_15 fs_large"></i>Profiles</li>
+                </ul>
             </div>
             <div class="col-lg-7 col-md-7" data-appear-animation="fadeInUp" data-appear-animation-delay="600">
               <div class="relative tablet">
@@ -155,7 +163,7 @@
                     <li class="m_bottom_8"><i class="icon-angle-right m_right_15 fs_large"></i>ERC20 Standard Ethereum Token</li>
                     <li class="m_bottom_8"><i class="icon-angle-right m_right_15 fs_large"></i>VirtuTV Tokens are distributed <strong class="color_light">by smart contract</strong></li>
                     <li class="m_bottom_8"><i class="icon-angle-right m_right_15 fs_large"></i>Symbol Name: VRTU</li>
-                    <li class="m_bottom_8"><i class="icon-angle-right m_right_15 fs_large"></i>Token Distribution: 30% Offered For Crowdsale</li>
+                    <li class="m_bottom_8"><i class="icon-angle-right m_right_15 fs_large"></i>Token Distribution: 10% Offered For Crowdsale</li>
                   </ul>
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-6 m_bottom_15">
@@ -175,7 +183,7 @@
       <section class="section_offset bg_light_2 p_bottom_0">
         <div class="container t_align_c">
           <h3 class="color_dark fw_light m_bottom_15" data-appear-animation="bounceInLeft">More about VirtuTV</h3>
-          <p class="m_bottom_35" data-appear-animation="bounceInLeft" data-appear-animation-delay="150">The VirtuTV platform is perfect for journalists, video bloggers, and podcasters. </p>
+          <p class="m_bottom_35" data-appear-animation="bounceInLeft" data-appear-animation-delay="150">The VirtuTV platform is perfect for content creators, video bloggers, podcasters, and journalists. </p>
           <div class="relative screens">
             {{!-- <img class="layer_2" src="images/prototype09.png" alt="" data-appear-animation="fadeInUp" data-appear-animation-delay="600" width="60%" height="80%"> --}}
 
@@ -210,17 +218,17 @@
           </li>
           <li>
             <div class="fw_normal">
-              <time class="color_green">Quarter 3 2017</time> Alpha MVP with basic functionality. Video, and Audio content. Open to crowdsale participants only.
+              <time class="color_green">Quarter 3 2017</time> Alpha MVP with basic functionality. Open to crowdsale participants only.
             </div>
           </li>
           <li>
             <div class="fw_normal">
-              <time class="color_green">Quarter 4 2017 - Quarter 1 2018</time> Beta with advanced functionality. Open to the public participants. 
+              <time class="color_green">Quarter 4 2017</time> Beta with advanced functionality. Open to the public participants. 
             </div>
           </li>
           <li>
             <div class="fw_normal">
-              <time class="color_green">Quarter 1-2 2018</time> Gamma with advanced features. Open source SDKs and APIs. Open to the public.  
+              <time class="color_green">Quarter 1 2018</time> Advanced features. Open source SDKs and APIs and the general public.
             </div>
           </li>
         </ul>
