--- a/views/team.handlebars
+++ b/views/team.handlebars
@@ -18,7 +18,7 @@
           <figcaption>
             <h4 class="m_bottom_5"><a href="https://www.linkedin.com/in/pavankat/" class="color_dark" target="_blank">Pavan Katepalli</a></h4>
             <i class="color_grey fs_medium d_inline_b m_bottom_5">Co-founder, Full-stack developer</i>
-            <p class="m_bottom_15">Pavan is a seasoned internet and education entrepreneur with significant startup experience. He taught at UC Berkelely, Rutgers and Barnard College. He is the founder of Inrtracker.com, a personal health management tool designed for Warfarin patients, and Chief Learning Officer of Trilogy Education Services, a technology education company, which he helped scale to over 500 colleges across the country.</p>
+            <p class="m_bottom_15">Pavan is a seasoned internet and education entrepreneur with significant startup experience. Currently, he teaches data analytics at UC Berkeley. In the past, he's taught web development at Rutgers University and Barnard College. He is the founder of INRtracker.com, a personal health management tool designed for Warfarin patients, and Chief Learning Officer of Trilogy Education Services, a technology education company, which he helped scale to over 25 colleges across the United States, and over 300 employees.</p>
             <ul class="d_inline_b social_icons">
               <li class="m_right_5 d_inline_m m_bottom_5"><a href="https://www.linkedin.com/in/pavankat/" class="color_grey_light_2 linkedin circle icon_wrap_size_1 d_block" target="_blank"><i class="icon-linkedin-1"></i></a></li>
             </ul>
@@ -32,7 +32,7 @@
           <figcaption>
             <h4 class="m_bottom_5"><a href="https://www.linkedin.com/in/vincent-porta-50952949/" class="color_dark" target="_blank">Vincent Porta</a></h4>
             <i class="color_grey fs_medium d_inline_b m_bottom_5">Co-founder, Full-stack developer</i>
-            <p class="m_bottom_15">Vincent is a full-stack and open source developer. Vincent's built a few notable NPM packages that have consistently been the most downloaded and used. Prior to becoming a professional web developer, he was involved in real estate sales in the NYC Metro Area, and will be pursing a Master's Degree in Software Engineering in the Fall of 2017.</p>
+            <p class="m_bottom_15">Vincent is a full-stack and open source developer, and is a master's student in Software Engineering at Stevens Institute of Technology. Vincent has made popular open source contributions that have consistently been the most downloaded and used in their respective categories. Prior to becoming a professional web developer, he was involved in real estate sales in the NYC Metro Area.</p>
             <ul class="d_inline_b social_icons">
               <li class="m_right_5 d_inline_m m_bottom_5"><a href="https://www.linkedin.com/in/vincent-porta-50952949/" class="color_grey_light_2 linkedin circle icon_wrap_size_1 d_block" target="_blank"><i class="icon-linkedin-1"></i></a></li>
             </ul>
@@ -46,7 +46,7 @@
           <figcaption>
             <h4 class="m_bottom_5"><a href="https://www.linkedin.com/in/nick-west-67471742/" class="color_dark" target="_blank">Nick West</a></h4>
             <i class="color_grey fs_medium d_inline_b m_bottom_5">React & React Native developer</i>
-            <p class="m_bottom_15">Nick has been working as a technologist and technology educator at Rutgers University for seven years. Nick has developed popular NPM packages for React Native. He is currently working as an Instructional Designer & Program Coordinator at Rutgers University School Of Social Work. </p>
+            <p class="m_bottom_15">Nick has been working as a technologist and technology educator at Rutgers University for seven years. Nick made an open source contribution to the React Native developer community, and has published multiple mobile apps. He is currently working as an Instructional Designer & Program Coordinator at Rutgers University School Of Social Work. </p>
             <ul class="d_inline_b social_icons">
               <li class="m_right_5 d_inline_m m_bottom_5"><a href="https://www.linkedin.com/in/nick-west-67471742/" class="color_grey_light_2 linkedin circle icon_wrap_size_1 d_block" target="_blank"><i class="icon-linkedin-1"></i></a></li>
             </ul>
@@ -63,7 +63,7 @@
           <figcaption>
             <h4 class="m_bottom_5"><a href="https://www.linkedin.com/in/williamavasquez/" class="color_dark" target="_blank">William Vasquez</a></h4>
             <i class="color_grey fs_medium d_inline_b m_bottom_5">Full-stack developer</i>
-            <p class="m_bottom_15">William is a full-stack web development professional bringing years of experience in different roles in both large and small companies. He founded Phuyu S. A. C., a strategic consulting company for brands, which he successfuly exited in 2014. Of Peruvian descent, William holds an MBA from the Universidad del Pacífico, and has competeted in various startup competitions including UPC University's START UPC, where his team took first place.  </p>
+            <p class="m_bottom_15">William is a full-stack web development professional bringing years of experience from different roles in both large and small companies. He founded Phuyu S. A. C., a strategic consulting company for brands, which he successfuly exited in 2014. Of Peruvian descent, William holds an MBA from the Universidad del Pacífico, and has competeted in various startup competitions including UPC University's START UPC, where his team took first place. Currently, William works as a consulting software developer at Citibank. </p>
             <ul class="d_inline_b social_icons">
               <li class="m_right_5 d_inline_m m_bottom_5"><a href="https://www.linkedin.com/in/williamavasquez/" class="color_grey_light_2 linkedin circle icon_wrap_size_1 d_block" target="_blank"><i class="icon-linkedin-1"></i></a></li>
             </ul>
@@ -90,8 +90,8 @@
           <img src="images/mattd.png" alt="" class="r_corners m_bottom_23" height="180px" width="180px">
           <figcaption>
             <h4 class="m_bottom_5"><a href="https://www.linkedin.com/in/mattsplats/" class="color_dark" target="_blank">Matt Davis</a></h4>
-            <i class="color_grey fs_medium d_inline_b m_bottom_5">Software developer/Code Tutor</i>
-            <p class="m_bottom_15">Matt is a rare coding talent and is currently ranked in the top 10% on Hackerrank. Matt is proficient in a number of languages (Python / Java / C++ / JavaScript), algorithms, data structures, AI and VR (Amazon Echo/Alexa, A-Frame/WebVR), and game development. When he is not building software, he is working as a rockstar coding tutor.
+            <i class="color_grey fs_medium d_inline_b m_bottom_5">Software developer</i>
+            <p class="m_bottom_15">Matt is a rare coding talent and is currently ranked in the top 8% on Hackerrank. Matt is proficient in a number of languages (Python / Java / C++ / JavaScript), algorithms, data structures, AI and VR (Amazon Echo/Alexa, A-Frame/WebVR), and game development. When he is not building software, he is working as a rockstar coding tutor.
             </p>
             <ul class="d_inline_b social_icons">
               <li class="m_right_5 d_inline_m m_bottom_5"><a href="https://www.linkedin.com/in/mattsplats/" class="color_grey_light_2 linkedin circle icon_wrap_size_1 d_block" target="_blank"><i class="icon-linkedin-1"></i></a></li>
