--- a/views/partials/nav.handlebars
+++ b/views/partials/nav.handlebars
@@ -337,7 +337,7 @@
           <div class="col-lg-4 col-md-4 col-sm-4 d_table_cell d_xs_block p_xs_hr_0 v_align_m f_none m_xs_bottom_20">
             <a href="/" class="d_inline_m">
 
-              <img src="images/virtu-logo.png" alt="">
+              <img src="images/virtu-logo.png" alt="" height="100px" width="265px">
             </a>
           </div>
           <div class="col-lg-8 col-md-6 col-sm-8 d_table_cell d_xs_block p_xs_hr_0 v_align_m f_none t_align_r t_xs_align_c">
