--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,7 +11,7 @@
     <meta name="description" content="">
     <link rel="shortcut icon" type="image/x-icon" href="images/virtu-logo.ico">
     <!--web fonts-->
-    <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic' rel='stylesheet' type='text/css'>
     <!--lins css-->
      
     <link rel="stylesheet" type="text/css" media="all" href="plugins/owl-carousel/owl.carousel.css">
