--- a/views/team.handlebars
+++ b/views/team.handlebars
@@ -14,7 +14,7 @@
       <div class="col-lg-4 col-md-4 col-sm-4 m_xs_bottom_30">
         <!--person team-->
         <figure class="t_align_c">
-          <img src="images/pavank.png" alt="" class="r_corners m_bottom_23" height="180px" width="180px">
+          <img src="images/Pavank.png" alt="" class="r_corners m_bottom_23" height="180px" width="180px">
           <figcaption>
             <h4 class="m_bottom_5"><a href="https://www.linkedin.com/in/pavankat/" class="color_dark" target="_blank">Pavan Katepalli</a></h4>
             <i class="color_grey fs_medium d_inline_b m_bottom_5">Co-founder, Full-stack developer</i>
