--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -134,7 +134,7 @@
                   <li class="m_bottom_8"><i class="icon-angle-right m_right_15 fs_large"></i>Online wallet</li>
                   <li class="m_bottom_8"><i class="icon-angle-right m_right_15 fs_large"></i>Video streaming via p2p</li>
                   <li class="m_bottom_8"><i class="icon-angle-right m_right_15 fs_large"></i>Locked content (unlocked via donations)</li>
-                  <li class="m_bottom_8"><i class="icon-angle-right m_right_15 fs_large"></i>Immediately get $5 worth of VRTU upon signup for freer</li>
+                  <li class="m_bottom_8"><i class="icon-angle-right m_right_15 fs_large"></i>Immediately get $5 worth of VRTU upon signup for free</li>
                   <li class="m_bottom_8"><i class="icon-angle-right m_right_15 fs_large"></i>Video engagement (like, dislike)</li>
                   <li class="m_bottom_8"><i class="icon-angle-right m_right_15 fs_large"></i>Nested comments</li>
                   <li class="m_bottom_8"><i class="icon-angle-right m_right_15 fs_large"></i>Subscriptions</li>
@@ -144,7 +144,7 @@
             </div>
             <div class="col-lg-7 col-md-7" data-appear-animation="fadeInUp" data-appear-animation-delay="600">
               <div class="relative tablet">
-                <img src="images/mobileview02.png">
+                <img src="images/mobileview01.png">
               </div>
             </div>
           </div>
