--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -6,7 +6,7 @@
           <div class="d_inline_b clearfix selectbuttons">
             <a href="/crowdsale" class="select_button_left f_xs_none color_light bg_color_green relative color_green_hover fs_medium tt_uppercase f_left">Contribute to Crowdsale</a>
             <div class="f_left or color_light tt_uppercase d_xs_none">or</div>
-            <br class="d_none d_xs_block">
+            {{!-- <br class="d_none d_xs_block"> --}}
             <a href="#how_it_works" class="select_button_right color_dark f_xs_none bg_light color_light_hover fs_medium relative tt_uppercase f_left">ICO Details</a>
           </div>
         </div>
@@ -125,8 +125,8 @@
                 <p class="fs_large m_bottom_45 fw_light">Some of the features of the VirtuTV platform include monetization for everyone (not just content creators), an online wallet, video streaming via p2p, locked content (unlocked via donations). </p>
                 <h5 class="color_dark fw_ex_bold m_bottom_40 m_xs_top_0">Monetization for all</h5>
                 <ul class="color_dark fw_light">
-                  <li class="m_bottom_8"><i class="icon-angle-right m_right_15 fs_large"></i>Content creators get paid per view and per ad engagement.</li>
-                  <li class="m_bottom_8"><i class="icon-angle-right m_right_15 fs_large"></i>One time or recurring donations to unlock content via VirtuCoin and then later Ether and Bitcoin.</li>
+                  <li class="m_bottom_8"><i class="icon-angle-right m_right_15 fs_large"></i>Content creators get paid per view and per ad engagement</li>
+                  <li class="m_bottom_8"><i class="icon-angle-right m_right_15 fs_large"></i>One time or recurring donations to unlock content via VirtuCoin and then later Ether and Bitcoin</li>
                 </ul>
                 <br>
                 <h5 class="color_dark fw_ex_bold m_bottom_40 m_xs_top_0">Platform</h5>
@@ -180,7 +180,7 @@
           </div>
         </div>
       </section>
-      <section class="section_offset bg_light_2 p_bottom_0">
+      <section class="section_offset p_bottom_0">
         <div class="container t_align_c">
           <h3 class="color_dark fw_light m_bottom_15" data-appear-animation="bounceInLeft">More about VirtuTV</h3>
           <p class="m_bottom_35" data-appear-animation="bounceInLeft" data-appear-animation-delay="150">The VirtuTV platform is perfect for content creators, video bloggers, podcasters, and journalists. </p>
