--- a/views/team.handlebars
+++ b/views/team.handlebars
@@ -21,6 +21,8 @@
             <p class="m_bottom_15">Pavan is a seasoned internet and education entrepreneur with significant startup experience. Currently, he teaches data analytics at UC Berkeley. In the past, he's taught web development at Rutgers University and Barnard College. He is the founder of INRtracker.com, a personal health management tool designed for Warfarin patients, and Chief Learning Officer of Trilogy Education Services, a technology education company, which he helped scale to over 25 colleges across the United States, and over 300 employees.</p>
             <ul class="d_inline_b social_icons">
               <li class="m_right_5 d_inline_m m_bottom_5"><a href="https://www.linkedin.com/in/pavankat/" class="color_grey_light_2 linkedin circle icon_wrap_size_1 d_block" target="_blank"><i class="icon-linkedin-1"></i></a></li>
+
+              <li class="m_right_5 d_inline_m m_bottom_5"><a href="https://github.com/pavankat" class="color_grey_light_2 github circle icon_wrap_size_1 d_block" target="_blank"><i class="fa fa-github fa-lg"></i></a></li>
             </ul>
           </figcaption>
         </figure>
@@ -35,6 +37,7 @@
             <p class="m_bottom_15">Vincent is a full-stack and open source developer, and is a master's student in Software Engineering at Stevens Institute of Technology. Vincent has made popular open source contributions that have consistently been the most downloaded and used in their respective categories. Prior to becoming a professional web developer, he was involved in real estate sales in the NYC Metro Area.</p>
             <ul class="d_inline_b social_icons">
               <li class="m_right_5 d_inline_m m_bottom_5"><a href="https://www.linkedin.com/in/vincent-porta-50952949/" class="color_grey_light_2 linkedin circle icon_wrap_size_1 d_block" target="_blank"><i class="icon-linkedin-1"></i></a></li>
+              <li class="m_right_5 d_inline_m m_bottom_5"><a href="https://github.com/vporta" class="color_grey_light_2 github circle icon_wrap_size_1 d_block" target="_blank"><i class="fa fa-github fa-lg"></i></a></li>
             </ul>
           </figcaption>
         </figure>
@@ -49,6 +52,7 @@
             <p class="m_bottom_15">Nick has been working as a technologist and technology educator at Rutgers University for seven years. Nick made an open source contribution to the React Native developer community, and has published multiple mobile apps. He is currently working as an Instructional Designer & Program Coordinator at Rutgers University School Of Social Work. </p>
             <ul class="d_inline_b social_icons">
               <li class="m_right_5 d_inline_m m_bottom_5"><a href="https://www.linkedin.com/in/nick-west-67471742/" class="color_grey_light_2 linkedin circle icon_wrap_size_1 d_block" target="_blank"><i class="icon-linkedin-1"></i></a></li>
+              <li class="m_right_5 d_inline_m m_bottom_5"><a href="https://github.com/njwest" class="color_grey_light_2 github circle icon_wrap_size_1 d_block" target="_blank"><i class="fa fa-github fa-lg"></i></a></li>
             </ul>
           </figcaption>
         </figure>
@@ -66,6 +70,7 @@
             <p class="m_bottom_15">William is a full-stack web development professional bringing years of experience from different roles in both large and small companies. He founded Phuyu S. A. C., a strategic consulting company for brands, which he successfuly exited in 2014. Of Peruvian descent, William holds an MBA from the Universidad del Pacífico, and has competeted in various startup competitions including UPC University's START UPC, where his team took first place. Currently, William works as a consulting software developer at Citibank. </p>
             <ul class="d_inline_b social_icons">
               <li class="m_right_5 d_inline_m m_bottom_5"><a href="https://www.linkedin.com/in/williamavasquez/" class="color_grey_light_2 linkedin circle icon_wrap_size_1 d_block" target="_blank"><i class="icon-linkedin-1"></i></a></li>
+              <li class="m_right_5 d_inline_m m_bottom_5"><a href="https://github.com/williamavasquez" class="color_grey_light_2 github circle icon_wrap_size_1 d_block" target="_blank"><i class="fa fa-github fa-lg"></i></a></li>
             </ul>
           </figcaption>
         </figure>
@@ -80,6 +85,7 @@
             <p class="m_bottom_15">Dzmitry is a Michelin star chef, and was the personal chef to Michael Jordan. He speaks fluently in Russian and Belorussian and holds a degree in Veterinary Medicine. Dzmitry is also a talented software developer and is proficient in various languages including JavaScript and C#. Dzmitry currently works as a full-stack  developer at Telesource.</p>
             <ul class="d_inline_b social_icons">
               <li class="m_right_5 d_inline_m m_bottom_5"><a href="https://www.linkedin.com/in/ddzmitry/" class="color_grey_light_2 linkedin circle icon_wrap_size_1 d_block" target="_blank"><i class="icon-linkedin-1"></i></a></li>
+              <li class="m_right_5 d_inline_m m_bottom_5"><a href="https://github.com/ddzmitry" class="color_grey_light_2 github circle icon_wrap_size_1 d_block" target="_blank"><i class="fa fa-github fa-lg"></i></a></li>
             </ul>
           </figcaption>
         </figure>
@@ -95,6 +101,7 @@
             </p>
             <ul class="d_inline_b social_icons">
               <li class="m_right_5 d_inline_m m_bottom_5"><a href="https://www.linkedin.com/in/mattsplats/" class="color_grey_light_2 linkedin circle icon_wrap_size_1 d_block" target="_blank"><i class="icon-linkedin-1"></i></a></li>
+              <li class="m_right_5 d_inline_m m_bottom_5"><a href="https://github.com/mattsplats" class="color_grey_light_2 github circle icon_wrap_size_1 d_block" target="_blank"><i class="fa fa-github fa-lg"></i></a></li>
             </ul>
           </figcaption>
         </figure>
