--- a/views/team.handlebars
+++ b/views/team.handlebars
@@ -34,7 +34,7 @@
           <figcaption>
             <h4 class="m_bottom_5"><a href="https://www.linkedin.com/in/vincent-porta-50952949/" class="color_dark" target="_blank">Vincent Porta</a></h4>
             <i class="color_grey fs_medium d_inline_b m_bottom_5">Co-founder, Full-stack developer</i>
-            <p class="m_bottom_15">Vincent is a full-stack and open source developer, and is a master's student in Software Engineering at Stevens Institute of Technology. Vincent has made popular open source contributions that have consistently been the most downloaded and used in their respective categories. Prior to becoming a professional web developer, he was involved in real estate sales in the NYC Metro Area.</p>
+            <p class="m_bottom_15">Vincent is a full-stack and open source developer, and is pursuing a Master's Degree in Software Engineering at Stevens Institute of Technology. Vincent has made popular open source contributions that have consistently been the most downloaded and used in their respective categories. Prior to becoming a professional web developer, he was involved in real estate sales in the NYC Metro Area.</p>
             <ul class="d_inline_b social_icons">
               <li class="m_right_5 d_inline_m m_bottom_5"><a href="https://www.linkedin.com/in/vincent-porta-50952949/" class="color_grey_light_2 linkedin circle icon_wrap_size_1 d_block" target="_blank"><i class="icon-linkedin-1"></i></a></li>
               <li class="m_right_5 d_inline_m m_bottom_5"><a href="https://github.com/vporta" class="color_grey_light_2 github circle icon_wrap_size_1 d_block" target="_blank"><i class="fa fa-github fa-lg"></i></a></li>
@@ -97,7 +97,7 @@
           <figcaption>
             <h4 class="m_bottom_5"><a href="https://www.linkedin.com/in/mattsplats/" class="color_dark" target="_blank">Matt Davis</a></h4>
             <i class="color_grey fs_medium d_inline_b m_bottom_5">Software developer</i>
-            <p class="m_bottom_15">Matt is a rare coding talent and is currently ranked in the top 8% on Hackerrank. Matt is proficient in a number of languages (Python / Java / C++ / JavaScript), algorithms, data structures, AI and VR (Amazon Echo/Alexa, A-Frame/WebVR), and game development. When he is not building software, he is working as a rockstar coding tutor.
+            <p class="m_bottom_15">Matt is a rare coding talent and is currently ranked in the top 8% on Hackerrank. He is proficient in a number of languages (Python / Java / C++ / JavaScript), algorithms, data structures, AI and VR (Amazon Echo/Alexa, A-Frame/WebVR), and game development. When he is not building software, he is working as a rockstar coding tutor.
             </p>
             <ul class="d_inline_b social_icons">
               <li class="m_right_5 d_inline_m m_bottom_5"><a href="https://www.linkedin.com/in/mattsplats/" class="color_grey_light_2 linkedin circle icon_wrap_size_1 d_block" target="_blank"><i class="icon-linkedin-1"></i></a></li>
